Fix: Force center alignment for Google Button

--- a/templates/auth.html
+++ b/templates/auth.html
@@ -66,8 +66,16 @@
                     </div>
                 </form>
 
+                <div style="display: flex; justify-content: center; width: 100%; margin-top: 10px;">
+                    <div class="g_id_signin" 
+                         data-type="standard" 
+                         data-size="large" 
+                         data-logo_alignment="left" 
+                         data-text="continue_with">
+                    </div>
+                </div>
+
                 <br>
-                <div class="g_id_signin" data-type="standard" data-size="large" data-logo_alignment="left" data-text="continue_with"></div>
                 <a class="forgot-password-link" href="#">Forgot Password?</a>
             </div>
         </div>
@@ -103,8 +111,15 @@
                     </div>
                 </form>
 
-                <br>
-                <div class="g_id_signin" data-type="standard" data-size="large" data-logo_alignment="left" data-text="signup_with"></div>
+                <div style="display: flex; justify-content: center; width: 100%; margin-top: 10px;">
+                    <div class="g_id_signin" 
+                         data-type="standard" 
+                         data-size="large" 
+                         data-logo_alignment="left" 
+                         data-text="signup_with">
+                    </div>
+                </div>
+                
             </div>
         </div>
     </div>
